# BMPO

./: .gitignore  0_BUILDER_AND_DISTRIBUTION.md  0_showcase_builder_and_distribution.py  AGENT.md  BATCHING_IMPLEMENTATION.md  BLOCK_UPDATE_SUMMARY.md  BMPO_README.md  BOND_UPDATE_SUMMARY.md  DESIGN_BATCHED_FORWARD.md  DESIGN_BATCHED_FORWARD_V2.md  EXPERIMENTS_README.md  FORWARD_OPERATIONS_GUIDE.md  INPUTS_CONSTRUCTOR.md  INPUT_CONTRACTION.md  INPUT_NODE_MEMORY_SHARING.md  LABEL_BASED_RESHAPING.md  OLD_visualize_predictions_standardized.py  PARTIAL_TRACE_SUMMARY.md  PROJECTION_IMPLEMENTATION.md  README.md  README_AUTH.md  SESSION_FINAL_SUMMARY.md  SESSION_SUMMARY.md  SESSION_SUMMARY_FINAL.md  THEORETICAL_MODEL.md  TIPS_AND_TRICKS.md  TODO_IMPLEMENTATIONS.md  TRIMMING_RESULTS.md  UNIFIED_BONDS_SUMMARY.md  aim_auth.py  atest.py  compare_contraction.py  compare_forward.py  compare_mu_rhs_sigma.py  compare_mu_update.py  compare_precision.py  compare_sigma_copy.py  compare_sigma_update.py  debug_block_collapse_detailed.py  debug_block_update.py  (+109 more)
.serena/: project.yml
showcase/: 01_topology_and_architecture.py  02_update_rules_dissection.py  03_training_and_learning.py  04_bond_trimming_analysis.py  README.md
tensor/: bayesian_mpo.py  bayesian_mpo_builder.py  bayesian_tn.py  bayesian_tn_builder.py  bmpo.py  bmpo2.py  btn.py  builder.py  distributions.py  network.py  probability_distributions.py  quimb_network.py  quimbt.py  test.py  test2.py
tensor_old/: bayesian_mpo.py  bayesian_mpo_builder.py  bmpo.py  layers.py  module.py  network.py  network_with_means.py  (+1 more)
(+3 files in other folders)
