[project]
name = "bayesian-mpo"
version = "0.1.0"
description = "Bayesian MPO with Aim tracking"
requires-python = ">=3.12"
dependencies = [
    "aim",
]

# Note: torch, jax, and quimb are provided by Nix

[tool.uv]
# Don't manage these with UV - they come from Nix
override-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
